src/generated/antlr/SqlMiniParser.ts
// Generated from src/grammars/antlr/SqlMini.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { SqlMiniListener } from "./SqlMiniListener";

export class SqlMiniParser extends Parser {
	public static readonly SELECT = 1;
	public static readonly FROM = 2;
	public static readonly WHERE = 3;
	public static readonly INSERT = 4;
	public static readonly INTO = 5;
	public static readonly VALUES = 6;
	public static readonly UPDATE = 7;
	public static readonly SET = 8;
	public static readonly DELETE = 9;
	public static readonly CREATE = 10;
	public static readonly DROP = 11;
	public static readonly ALTER = 12;
	public static readonly TABLE = 13;
	public static readonly VIEW = 14;
	public static readonly INDEX = 15;
	public static readonly DATABASE = 16;
	public static readonly SCHEMA = 17;
	public static readonly USE = 18;
	public static readonly SHOW = 19;
	public static readonly TABLES = 20;
	public static readonly DATABASES = 21;
	public static readonly COLUMNS = 22;
	public static readonly DESCRIBE = 23;
	public static readonly DESC = 24;
	public static readonly DISTINCT = 25;
	public static readonly GROUP = 26;
	public static readonly BY = 27;
	public static readonly HAVING = 28;
	public static readonly ORDER = 29;
	public static readonly ASC = 30;
	public static readonly DESC_ORDER = 31;
	public static readonly LIMIT = 32;
	public static readonly AS = 33;
	public static readonly IF = 34;
	public static readonly EXISTS = 35;
	public static readonly ADD = 36;
	public static readonly MODIFY = 37;
	public static readonly AND = 38;
	public static readonly OR = 39;
	public static readonly NOT = 40;
	public static readonly NULL = 41;
	public static readonly TRUE = 42;
	public static readonly FALSE = 43;
	public static readonly PRIMARY = 44;
	public static readonly FOREIGN = 45;
	public static readonly KEY = 46;
	public static readonly REFERENCES = 47;
	public static readonly UNIQUE = 48;
	public static readonly AUTO_INCREMENT = 49;
	public static readonly DEFAULT = 50;
	public static readonly VARCHAR = 51;
	public static readonly CHAR = 52;
	public static readonly INT = 53;
	public static readonly INTEGER = 54;
	public static readonly BIGINT = 55;
	public static readonly SMALLINT = 56;
	public static readonly TINYINT = 57;
	public static readonly DECIMAL = 58;
	public static readonly NUMERIC = 59;
	public static readonly FLOAT = 60;
	public static readonly DOUBLE = 61;
	public static readonly REAL = 62;
	public static readonly DATE = 63;
	public static readonly TIME = 64;
	public static readonly DATETIME = 65;
	public static readonly TIMESTAMP = 66;
	public static readonly TEXT = 67;
	public static readonly BLOB = 68;
	public static readonly BOOLEAN = 69;
	public static readonly EQUALS = 70;
	public static readonly NOT_EQUALS = 71;
	public static readonly LESS_THAN = 72;
	public static readonly GREATER_THAN = 73;
	public static readonly LESS_EQUALS = 74;
	public static readonly GREATER_EQUALS = 75;
	public static readonly PLUS = 76;
	public static readonly MINUS = 77;
	public static readonly MULTIPLY = 78;
	public static readonly DIVIDE = 79;
	public static readonly MODULO = 80;
	public static readonly SEMICOLON = 81;
	public static readonly COMMA = 82;
	public static readonly LPAREN = 83;
	public static readonly RPAREN = 84;
	public static readonly STRING = 85;
	public static readonly QUOTED_IDENTIFIER = 86;
	public static readonly NUMBER = 87;
	public static readonly BOOLEAN_LITERAL = 88;
	public static readonly IDENTIFIER = 89;
	public static readonly COMMENT = 90;
	public static readonly WS = 91;
	public static readonly RULE_sqlFile = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_selectStatement = 2;
	public static readonly RULE_insertStatement = 3;
	public static readonly RULE_updateStatement = 4;
	public static readonly RULE_deleteStatement = 5;
	public static readonly RULE_createStatement = 6;
	public static readonly RULE_dropStatement = 7;
	public static readonly RULE_alterStatement = 8;
	public static readonly RULE_useStatement = 9;
	public static readonly RULE_showStatement = 10;
	public static readonly RULE_describeStatement = 11;
	public static readonly RULE_selectList = 12;
	public static readonly RULE_tableList = 13;
	public static readonly RULE_columnList = 14;
	public static readonly RULE_valueList = 15;
	public static readonly RULE_updateList = 16;
	public static readonly RULE_orderList = 17;
	public static readonly RULE_expression = 18;
	public static readonly RULE_subquery = 19;
	public static readonly RULE_functionCall = 20;
	public static readonly RULE_createBody = 21;
	public static readonly RULE_columnDefinition = 22;
	public static readonly RULE_dataType = 23;
	public static readonly RULE_constraintList = 24;
	public static readonly RULE_constraint = 25;
	public static readonly RULE_tableName = 26;
	public static readonly RULE_columnName = 27;
	public static readonly RULE_databaseName = 28;
	public static readonly RULE_functionName = 29;
	public static readonly RULE_alias = 30;
	public static readonly RULE_identifier = 31;
	public static readonly RULE_literal = 32;
	public static readonly RULE_comment = 33;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"sqlFile", "statement", "selectStatement", "insertStatement", "updateStatement", 
		"deleteStatement", "createStatement", "dropStatement", "alterStatement", 
		"useStatement", "showStatement", "describeStatement", "selectList", "tableList", 
		"columnList", "valueList", "updateList", "orderList", "expression", "subquery", 
		"functionCall", "createBody", "columnDefinition", "dataType", "constraintList", 
		"constraint", "tableName", "columnName", "databaseName", "functionName", 
		"alias", "identifier", "literal", "comment",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		"'='", undefined, "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", 
		"'%'", "';'", "','", "'('", "')'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "SELECT", "FROM", "WHERE", "INSERT", "INTO", "VALUES", "UPDATE", 
		"SET", "DELETE", "CREATE", "DROP", "ALTER", "TABLE", "VIEW", "INDEX", 
		"DATABASE", "SCHEMA", "USE", "SHOW", "TABLES", "DATABASES", "COLUMNS", 
		"DESCRIBE", "DESC", "DISTINCT", "GROUP", "BY", "HAVING", "ORDER", "ASC", 
		"DESC_ORDER", "LIMIT", "AS", "IF", "EXISTS", "ADD", "MODIFY", "AND", "OR", 
		"NOT", "NULL", "TRUE", "FALSE", "PRIMARY", "FOREIGN", "KEY", "REFERENCES", 
		"UNIQUE", "AUTO_INCREMENT", "DEFAULT", "VARCHAR", "CHAR", "INT", "INTEGER", 
		"BIGINT", "SMALLINT", "TINYINT", "DECIMAL", "NUMERIC", "FLOAT", "DOUBLE", 
		"REAL", "DATE", "TIME", "DATETIME", "TIMESTAMP", "TEXT", "BLOB", "BOOLEAN", 
		"EQUALS", "NOT_EQUALS", "LESS_THAN", "GREATER_THAN", "LESS_EQUALS", "GREATER_EQUALS", 
		"PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULO", "SEMICOLON", "COMMA", 
		"LPAREN", "RPAREN", "STRING", "QUOTED_IDENTIFIER", "NUMBER", "BOOLEAN_LITERAL", 
		"IDENTIFIER", "COMMENT", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(SqlMiniParser._LITERAL_NAMES, SqlMiniParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return SqlMiniParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "SqlMini.g4"; }

	// @Override
	public get ruleNames(): string[] { return SqlMiniParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return SqlMiniParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(SqlMiniParser._ATN, this);
	}
	// @RuleVersion(0)
	public sqlFile(): SqlFileContext {
		let _localctx: SqlFileContext = new SqlFileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, SqlMiniParser.RULE_sqlFile);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 71;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SqlMiniParser.SELECT) | (1 << SqlMiniParser.INSERT) | (1 << SqlMiniParser.UPDATE) | (1 << SqlMiniParser.DELETE) | (1 << SqlMiniParser.CREATE) | (1 << SqlMiniParser.DROP) | (1 << SqlMiniParser.ALTER) | (1 << SqlMiniParser.USE) | (1 << SqlMiniParser.SHOW) | (1 << SqlMiniParser.DESCRIBE) | (1 << SqlMiniParser.DESC))) !== 0) || _la === SqlMiniParser.COMMENT) {
				{
				{
				this.state = 68;
				this.statement();
				}
				}
				this.state = 73;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 74;
			this.match(SqlMiniParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, SqlMiniParser.RULE_statement);
		let _la: number;
		try {
			this.state = 120;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SqlMiniParser.SELECT:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 76;
				this.selectStatement();
				this.state = 78;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === SqlMiniParser.SEMICOLON) {
					{
					this.state = 77;
					this.match(SqlMiniParser.SEMICOLON);
					}
				}

				}
				break;
			case SqlMiniParser.INSERT:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 80;
				this.insertStatement();
				this.state = 82;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === SqlMiniParser.SEMICOLON) {
					{
					this.state = 81;
					this.match(SqlMiniParser.SEMICOLON);
					}
				}

				}
				break;
			case SqlMiniParser.UPDATE:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 84;
				this.updateStatement();
				this.state = 86;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === SqlMiniParser.SEMICOLON) {
					{
					this.state = 85;
					this.match(SqlMiniParser.SEMICOLON);
					}
				}

				}
				break;
			case SqlMiniParser.DELETE:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 88;
				this.deleteStatement();
				this.state = 90;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === SqlMiniParser.SEMICOLON) {
					{
					this.state = 89;
					this.match(SqlMiniParser.SEMICOLON);
					}
				}

				}
				break;
			case SqlMiniParser.CREATE:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 92;
				this.createStatement();
				this.state = 94;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === SqlMiniParser.SEMICOLON) {
					{
					this.state = 93;
					this.match(SqlMiniParser.SEMICOLON);
					}
				}

				}
				break;
			case SqlMiniParser.DROP:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 96;
				this.dropStatement();
				this.state = 98;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === SqlMiniParser.SEMICOLON) {
					{
					this.state = 97;
					this.match(SqlMiniParser.SEMICOLON);
					}
				}

				}
				break;
			case SqlMiniParser.ALTER:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 100;
				this.alterStatement();
				this.state = 102;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === SqlMiniParser.SEMICOLON) {
					{
					this.state = 101;
					this.match(SqlMiniParser.SEMICOLON);
					}
				}

				}
				break;
			case SqlMiniParser.USE:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 104;
				this.useStatement();
				this.state = 106;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === SqlMiniParser.SEMICOLON) {
					{
					this.state = 105;
					this.match(SqlMiniParser.SEMICOLON);
					}
				}

				}
				break;
			case SqlMiniParser.SHOW:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 108;
				this.showStatement();
				this.state = 110;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === SqlMiniParser.SEMICOLON) {
					{
					this.state = 109;
					this.match(SqlMiniParser.SEMICOLON);
					}
				}

				}
				break;
			case SqlMiniParser.DESCRIBE:
			case SqlMiniParser.DESC:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 112;
				this.describeStatement();
				this.state = 114;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === SqlMiniParser.SEMICOLON) {
					{
					this.state = 113;
					this.match(SqlMiniParser.SEMICOLON);
					}
				}

				}
				break;
			case SqlMiniParser.COMMENT:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 116;
				this.comment();
				this.state = 118;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === SqlMiniParser.SEMICOLON) {
					{
					this.state = 117;
					this.match(SqlMiniParser.SEMICOLON);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public selectStatement(): SelectStatementContext {
		let _localctx: SelectStatementContext = new SelectStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, SqlMiniParser.RULE_selectStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 122;
			this.match(SqlMiniParser.SELECT);
			this.state = 124;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SqlMiniParser.DISTINCT) {
				{
				this.state = 123;
				this.match(SqlMiniParser.DISTINCT);
				}
			}

			this.state = 126;
			this.selectList();
			this.state = 127;
			this.match(SqlMiniParser.FROM);
			this.state = 128;
			this.tableList();
			this.state = 131;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SqlMiniParser.WHERE) {
				{
				this.state = 129;
				this.match(SqlMiniParser.WHERE);
				this.state = 130;
				this.expression(0);
				}
			}

			this.state = 136;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SqlMiniParser.GROUP) {
				{
				this.state = 133;
				this.match(SqlMiniParser.GROUP);
				this.state = 134;
				this.match(SqlMiniParser.BY);
				this.state = 135;
				this.columnList();
				}
			}

			this.state = 140;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SqlMiniParser.HAVING) {
				{
				this.state = 138;
				this.match(SqlMiniParser.HAVING);
				this.state = 139;
				this.expression(0);
				}
			}

			this.state = 145;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SqlMiniParser.ORDER) {
				{
				this.state = 142;
				this.match(SqlMiniParser.ORDER);
				this.state = 143;
				this.match(SqlMiniParser.BY);
				this.state = 144;
				this.orderList();
				}
			}

			this.state = 149;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SqlMiniParser.LIMIT) {
				{
				this.state = 147;
				this.match(SqlMiniParser.LIMIT);
				this.state = 148;
				this.match(SqlMiniParser.NUMBER);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public insertStatement(): InsertStatementContext {
		let _localctx: InsertStatementContext = new InsertStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, SqlMiniParser.RULE_insertStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 151;
			this.match(SqlMiniParser.INSERT);
			this.state = 152;
			this.match(SqlMiniParser.INTO);
			this.state = 153;
			this.tableName();
			this.state = 158;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SqlMiniParser.LPAREN) {
				{
				this.state = 154;
				this.match(SqlMiniParser.LPAREN);
				this.state = 155;
				this.columnList();
				this.state = 156;
				this.match(SqlMiniParser.RPAREN);
				}
			}

			this.state = 166;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SqlMiniParser.VALUES:
				{
				this.state = 160;
				this.match(SqlMiniParser.VALUES);
				this.state = 161;
				this.match(SqlMiniParser.LPAREN);
				this.state = 162;
				this.valueList();
				this.state = 163;
				this.match(SqlMiniParser.RPAREN);
				}
				break;
			case SqlMiniParser.SELECT:
				{
				this.state = 165;
				this.selectStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public updateStatement(): UpdateStatementContext {
		let _localctx: UpdateStatementContext = new UpdateStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, SqlMiniParser.RULE_updateStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 168;
			this.match(SqlMiniParser.UPDATE);
			this.state = 169;
			this.tableName();
			this.state = 170;
			this.match(SqlMiniParser.SET);
			this.state = 171;
			this.updateList();
			this.state = 174;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SqlMiniParser.WHERE) {
				{
				this.state = 172;
				this.match(SqlMiniParser.WHERE);
				this.state = 173;
				this.expression(0);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public deleteStatement(): DeleteStatementContext {
		let _localctx: DeleteStatementContext = new DeleteStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, SqlMiniParser.RULE_deleteStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 176;
			this.match(SqlMiniParser.DELETE);
			this.state = 177;
			this.match(SqlMiniParser.FROM);
			this.state = 178;
			this.tableName();
			this.state = 181;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SqlMiniParser.WHERE) {
				{
				this.state = 179;
				this.match(SqlMiniParser.WHERE);
				this.state = 180;
				this.expression(0);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public createStatement(): CreateStatementContext {
		let _localctx: CreateStatementContext = new CreateStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, SqlMiniParser.RULE_createStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 183;
			this.match(SqlMiniParser.CREATE);
			this.state = 184;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SqlMiniParser.TABLE) | (1 << SqlMiniParser.VIEW) | (1 << SqlMiniParser.INDEX) | (1 << SqlMiniParser.DATABASE) | (1 << SqlMiniParser.SCHEMA))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 185;
			this.tableName();
			this.state = 187;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SqlMiniParser.LPAREN) {
				{
				this.state = 186;
				this.createBody();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public dropStatement(): DropStatementContext {
		let _localctx: DropStatementContext = new DropStatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, SqlMiniParser.RULE_dropStatement);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 189;
			this.match(SqlMiniParser.DROP);
			this.state = 190;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SqlMiniParser.TABLE) | (1 << SqlMiniParser.VIEW) | (1 << SqlMiniParser.INDEX) | (1 << SqlMiniParser.DATABASE) | (1 << SqlMiniParser.SCHEMA))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 193;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SqlMiniParser.IF) {
				{
				this.state = 191;
				this.match(SqlMiniParser.IF);
				this.state = 192;
				this.match(SqlMiniParser.EXISTS);
				}
			}
